# alphavantage

./: .bumpversion.cfg  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
deploy/aws-chalice/: .chaliceignore  README.md  app.py  deploy.sh  requirements.txt  setup-cognito.sh
deploy/aws-stateless-mcp-lambda/: README.md  lambda_function.py
src/alphavantage_mcp_client/: client.py
src/alphavantage_mcp_server/: __init__.py  __main__.py  api.py  oauth.py  prompts.py  response_utils.py  server.py  tools.py
tests/: test_api.py
