[project]
name = "alphavantage"
version = "0.3.20"
description = "Alphavantage MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump2version>=1.0.1",
    "load-dotenv>=0.1.0",
    "mcp>=1.9.4",
    "toml>=0.10.2",
    "starlette>=0.47.2",
    "uvicorn>=0.32.1",
    "pytest-asyncio>=0.24.0",
    "openai>=1.58.1",
    "PyJWT>=2.10.1",
    "httpx>=0.28.1",
    "requests>=2.32.0",

    "prometheus-client>=0.20.0",
]
[[project.authors]]
name = "Cesar Alvernaz"
email = "cesar.alvernaz@gmail.com"


[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphavantage_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.9",
]

[project.scripts]
alphavantage = "alphavantage_mcp_server:main"
